fix answers history wrap

--- a/src/screens/settings/info/info.css
+++ b/src/screens/settings/info/info.css
@@ -1,3 +1,7 @@
+.list-item {
+    margin-bottom: 12px;
+}
+
 .list-item-content .title {
     font-size: var(--font_title_size);
     margin-bottom: 20px;
